feature: add tmux escape-time to prevent slow Esc inside Neovim

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,22 +1,28 @@
-### Keybinds
+# Keybinds
 
 bind-key -n C-N new-window
 bind-key -n M-h previous-window
 bind-key -n M-l next-window
 
 
-### Design tweaks
+# Design tweaks
 
-# Status bar
+### Status bar
 set -g status-position top
 set -g status-style 'bg=black'
 set -g status-left ''
 set -g status-right ''
 
-# Active window
+### Active window
 setw -g window-status-current-style 'bg=white fg=black'
 setw -g window-status-current-format ' #W '
 
-# Other windows
+### Other windows
 setw -g window-status-style 'bg=black fg=white dim'
 setw -g window-status-format ' #W '
+
+
+# Tweaks
+
+### Prevent slow Esc inside Neovim
+set -sg escape-time 0
