refactor: revamp tmux bindings to get everything needed for my workflow

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,8 +1,14 @@
 # Keybinds
 
-bind-key -n C-N new-window
-bind-key -n M-h previous-window
-bind-key -n M-l next-window
+bind-key -n M-t new-window # Open new window
+bind-key -n C-PageUp previous-window # Go to previous window
+bind-key -n C-PageDown next-window # Go to next window
+bind-key -n C-S-PageUp swap-window -t -1\; select-window -t -1 # Move window to lef
+bind-key -n C-S-PageDown swap-window -t +1\; select-window -t +1 # Move window to right
+bind-key -n M-d split-window -h -c '#{pane_current_path}' \; split-window -h -c '#{pane_current_path}' \; select-layout even-horizontal # Split window in 3 panes in the current path and spread them evenly
+bind-key -n M-z resize-pane -Z # Zoom pane
+bind-key -n M-h select-pane -L \; resize-pane -Z # Go to previous pane and zoom it
+bind-key -n M-l select-pane -R \; resize-pane -Z # Go to next pane and zoom it
 
 
 # Design tweaks
