feature: enable mouse for scrolling in tmux

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -32,3 +32,6 @@ setw -g window-status-format ' #W '
 
 ### Prevent slow Esc inside Neovim
 set -sg escape-time 0
+
+### Enable mouse
+set -g mouse on
