--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -7,8 +7,8 @@ bind-key -n C-S-PageUp swap-window -t -1\; select-window -t -1 # Move window to 
 bind-key -n C-S-PageDown swap-window -t +1\; select-window -t +1 # Move window to right
 bind-key -n M-d split-window -h -c '#{pane_current_path}' \; split-window -h -c '#{pane_current_path}' \; select-layout even-horizontal # Split window in 3 panes in the current path and spread them evenly
 bind-key -n M-z resize-pane -Z # Zoom pane
-bind-key -n M-h select-pane -L \; resize-pane -Z # Go to previous pane and zoom it
-bind-key -n M-l select-pane -R \; resize-pane -Z # Go to next pane and zoom it
+bind-key -n M-h select-pane -L -Z # Go to previous pane
+bind-key -n M-l select-pane -R -Z # Go to next pane
 
 
 # Design tweaks
